tests/snapshots/formats__openssh-key__ed25519.bin.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ ed25519.bin — OpenSSH private key, ssh-ed25519, 256 bits, unencrypted  [0x0+0xfa]
    Magic: "openssh-key-v1"  [0x0+0xf]
    Cipher: "none"  [0xf+0x8]
    KDF: "none"  [0x17+0x8]
    KDF options — empty  [0x1f+0x4]
    Number of keys: 1  [0x23+0x4]
  ▾ Public key 1 — ssh-ed25519, 256 bits  [0x2b+0x33]
      Key type: "ssh-ed25519"  [0x2b+0xf]
      Public key: 9d 5c dd 72 1a 54 5f d6 00 ca 18 13 fe ee 1a b9 …  |.\.r.T_.........| — 32 bytes  [0x3a+0x24]
  ▾ Private section — 1 key  [0x5e+0x9c]
      Check 1: 0x2d9f20d5  [0x62+0x4]
      Check 2: 0x2d9f20d5  [0x66+0x4]
    ▾ plain@fillyfoal — ssh-ed25519  [0x6a+0x8a]
        Key type: "ssh-ed25519"  [0x6a+0xf]
        Public key: 9d 5c dd 72 1a 54 5f d6 00 ca 18 13 fe ee 1a b9 …  |.\.r.T_.........| — 32 bytes  [0x79+0x24]
        Private key (seed ‖ public key) — present, 64 bytes  [0x9d+0x44]
        Comment: "plain@fillyfoal"  [0xe1+0x13]
      Padding — 6 bytes  [0xf4+0x6]
