tests/snapshots/formats__openssh-key__id_ed25519.bin.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ id_ed25519.bin — OpenSSH private key, ssh-ed25519, 256 bits, unencrypted  [0x0+0xf6]
    Magic: "openssh-key-v1"  [0x0+0xf]
    Cipher: "none"  [0xf+0x8]
    KDF: "none"  [0x17+0x8]
    KDF options — empty  [0x1f+0x4]
    Number of keys: 1  [0x23+0x4]
  ▾ Public key 1 — ssh-ed25519, 256 bits  [0x2b+0x33]
      Key type: "ssh-ed25519"  [0x2b+0xf]
      Public key: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................| — 32 bytes  [0x3a+0x24]
  ▾ Private section — 1 key  [0x5e+0x98]
      Check 1: 0x1234  [0x62+0x4]
      Check 2: 0x1234  [0x66+0x4]
    ▾ user@fillyfoal — ssh-ed25519  [0x6a+0x89]
        Key type: "ssh-ed25519"  [0x6a+0xf]
        Public key: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................| — 32 bytes  [0x79+0x24]
        Private key (seed ‖ public key) — present, 64 bytes  [0x9d+0x44]
        Comment: "user@fillyfoal"  [0xe1+0x12]
      Padding — 3 bytes  [0xf3+0x3]
